[gd_scene load_steps=22 format=2]

[ext_resource path="res://Materiais RPG/bomba/explosao/Explosao8.png" type="Texture" id=1]
[ext_resource path="res://Materiais RPG/bomba/Bomba3.png" type="Texture" id=2]
[ext_resource path="res://Materiais RPG/bomba/Bomba1 (1).png" type="Texture" id=3]
[ext_resource path="res://Materiais RPG/bomba/Bomba2.png" type="Texture" id=4]
[ext_resource path="res://Materiais RPG/bomba/Bomba4.png" type="Texture" id=5]
[ext_resource path="res://Materiais RPG/bomba/explosao/Explosao1.png" type="Texture" id=6]
[ext_resource path="res://Materiais RPG/bomba/explosao/Explosao2.png" type="Texture" id=7]
[ext_resource path="res://Materiais RPG/bomba/explosao/Explosao3.png" type="Texture" id=8]
[ext_resource path="res://Materiais RPG/bomba/explosao/Explosao4.png" type="Texture" id=9]
[ext_resource path="res://Materiais RPG/bomba/explosao/Explosao5.png" type="Texture" id=10]
[ext_resource path="res://Materiais RPG/bomba/Bomba5.png" type="Texture" id=11]
[ext_resource path="res://Materiais RPG/bomba/Bomba6.png" type="Texture" id=12]
[ext_resource path="res://Materiais RPG/bomba/Bomba7.png" type="Texture" id=13]
[ext_resource path="res://Materiais RPG/bomba/explosao/Explosao6.png" type="Texture" id=14]
[ext_resource path="res://Materiais RPG/bomba/explosao/Explosao7.png" type="Texture" id=15]
[ext_resource path="res://Materiais RPG/bomba/Bomba8.png" type="Texture" id=16]
[ext_resource path="res://scripts/bomba.gd" type="Script" id=17]
[ext_resource path="res://Materiais RPG/sons/explosao.wav" type="AudioStream" id=18]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 4 ), ExtResource( 2 ), ExtResource( 5 ), ExtResource( 11 ), ExtResource( 13 ), ExtResource( 12 ), ExtResource( 16 ) ],
"loop": true,
"name": "default",
"speed": 10.0
} ]

[sub_resource type="CircleShape2D" id=2]
radius = 99.5739

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [  ],
"loop": true,
"name": "New Anim",
"speed": 5.0
}, {
"frames": [ ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 1 ) ],
"loop": false,
"name": "explode",
"speed": 10.0
} ]

[node name="bomba" type="Area2D"]
scale = Vector2( 0.3, 0.3 )
z_index = -1
script = ExtResource( 17 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -1.49829, 0 )
shape = SubResource( 2 )

[node name="explosao" type="AnimatedSprite" parent="."]
frames = SubResource( 3 )
animation = "New Anim"

[node name="Timer" type="Timer" parent="."]
wait_time = 0.3

[node name="explode" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 18 )

[node name="TimerBombaInativa" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
autostart = true

[connection signal="body_entered" from="." to="." method="_on_bomba_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="TimerBombaInativa" to="." method="_on_TimerBombaInativa_timeout"]
